--- a/client/about Us/aboutUs.html
+++ b/client/about Us/aboutUs.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../transition.css">
 <script src="../transition.js" defer></script>
 
-  <link rel="icon" type="image/png" href="../aboutUs/logo-removebg-preview.png" />
+  <link rel="icon" type="image/png" href="../about Us/logo-removebg-preview copy.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
   <script>
@@ -26,7 +26,7 @@
 <!-- NAVIGATION -->
 <nav>
   <div class="navLogo">
-    <img src="logo-removebg-preview.png" alt="Logo" /> 
+    <img src="logo-removebg-preview copy.png" alt="Logo" /> 
     <h1 class="navTitle">Apptube</h1>
   </div>
 
